# lerobot-augment

./: .gitignore  README.md  pyproject.toml
src/lerobot_augment/: __init__.py  cli.py  pipeline.py  utils.py
src/lerobot_augment/augmentations/: __init__.py  action_noise.py  base.py  filtering.py  smoothing.py  temporal.py  visual.py
